--- a/My Project/web development/index.html
+++ b/My Project/web development/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is a page</h1>
-    <h2>This is second line</h2>
+        <h1>This is my first commint.</h1>
 </body>
 </html>
